[package]
name = "practice"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "practice"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }